# trakt-mcp-server

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  trakt-mcp-server.insomnia_collection  trakt-mcp-server.postman_collection
src/: server.py
src/api/: __init__.py
src/config/: __init__.py  settings.py
src/exceptions/: __init__.py
src/formatters/: __init__.py
src/tools/: __init__.py  discovery.py  history.py  watchlist.py
src/utils/: logger.py
