[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trakt-mcp-server"
version = "0.0.3"
description = "A production-ready Model Context Protocol (MCP) server for Trakt.tv API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fabrizio Greco"}
]
keywords = ["mcp", "trakt", "model-context-protocol", "ai", "llm", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications",
]

dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "black>=25.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
logging = [
    "python-json-logger>=3.2.0",
]
monitoring = [
    "prometheus-client>=0.21.0",
]
cache = [
    "diskcache>=5.6.0",
]

[project.urls]
Homepage = "https://github.com/fab-codes/trakt-mcp-server"
Repository = "https://github.com/fab-codes/trakt-mcp-server"
Issues = "https://github.com/fab-codes/trakt-mcp-server/issues"
Documentation = "https://github.com/fab-codes/trakt-mcp-server#readme"

[project.scripts]
trakt-mcp = "main:main"

[project.entry-points."fastmcp"]
trakt = "src.server:mcp"

[tool.setuptools]
packages = ["src", "src.api", "src.config", "src.exceptions", "src.formatters", "src.tools", "src.utils"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.yaml", "*.yml"]

# ============================================================================
# RUFF - Fast Python Linter & Formatter (2025 Standard)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# ============================================================================
# BLACK - Code Formatter (2025 Standard)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

# ============================================================================
# MYPY - Static Type Checker (2025 Standard)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "dotenv.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing Framework (2025 Standard)
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# COVERAGE - Code Coverage (2025 Standard)
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
